[Http][Cli] Add request, response, and CLI input message-mapping fidelity tests (#55)
# Description

Adds framework-level **message-mapping fidelity** tests: proof that an
incoming HTTP request, an
outgoing HTTP response, and an incoming CLI command map faithfully onto
the framework's own
objects — independent of routing.

This implements the architecture TODO item
["Framework tests — request & command mapping
fidelity"](https://github.com/valkyrjaio/architecture/pull/65)
for Java, mirroring the PHP reference implementation 1:1 in structure
and assertions.

Sibling PRs:

- **PHP** — valkyrjaio/valkyrja-php#932 (merged, the reference tests)
and
valkyrjaio/valkyrja-php#935 (fixes the `--expr=a=b` truncation noted
below).
- **Architecture** — valkyrjaio/architecture#68 (documents the
per-language CLI argv conventions).

A mapping defect — a dropped header, a wrong reason phrase, a mis-parsed
option — is invisible to
route-matching tests. The Java and TypeScript starter-app entry/worker
end-to-end work surfaced
exactly this class of bug, caught far from the source. These tests shift
that coverage left:
sooner, and closer to where the mapping actually lives.

The tests are **functional** (they exercise the factory → collection →
message pipeline as a whole)
rather than unit, and they assert observable behavior only, through the
public API.

## Two real mapping bugs found and fixed

Unlike the PHP sibling, which was test-only, these tests caught two
genuine framework defects.
Reverting either fix makes the new tests fail (3 failures), so both are
covered by regression tests
in this PR.

1. **CLI options in the command-name slot were swallowed.**
`InputFactory` checked `i == 0` *before*
the `-` check, so `valkyrja --verbose app:version` produced the command
name `"--verbose"` instead
of parsing an option and leaving the default command name to stand. PHP
never hits this because
   its `$argv[0]` is always the script path.
2. **Parsed body and uploaded files lost their orde